# program-metadata

./: Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  codama.mjs  idl.json  package.json  pnpm-lock.yaml
.github/: copilot-instructions.md
.github/actions/setup/: action.yml
.github/agents/: release-readiness.agent.md
.github/instructions/: js-client.instructions.md  rust-client.instructions.md  solana-program-core.instructions.md
.github/prompts/: program-safety-gate.prompt.md  regenerate-clients.prompt.md  review-program-authority.prompt.md  select-program-regression-tests.prompt.md
.github/workflows/: main.yml  publish-js.yml  publish-rust.yml
clients/js/: .eslintrc.cjs  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsup.config.ts
clients/js/src/: cli-arguments.ts  cli-options.ts  cli-utils.ts  cli.ts  createBuffer.ts  createMetadata.ts  downloadMetadata.ts  fetchIdl.ts  fetchMetadataContent.ts  fetchMetadataWithContent.ts  index.ts  internals.ts  packData.ts  plugin.ts  updateBuffer.ts  updateMetadata.ts  uploadMetadata.ts  upsertMetadata.ts  utils.ts  writeMetadata.ts
clients/js/src/cli/: arguments.ts  index.ts  logs.ts  options.ts  parsers.ts  program.ts  utils.ts
clients/js/src/cli/commands/: close-buffer.ts  close.ts  create-buffer.ts  create.ts  fetch-buffer.ts  fetch.ts  history.ts  index.ts  list-buffers.ts  remove-authority.ts  set-authority.ts  set-buffer-authority.ts  set-immutable.ts  update-buffer.ts  update.ts  write.ts
clients/js/src/instructionPlans/: computeBudgetHelpers.ts  defaultInstructionPlanExecutor.ts  index.ts  instructionPlan.ts  instructionPlanExecutor.ts  internal.ts  transactionHelpers.ts  transactionPlan.ts  transactionPlanExecutor.ts  transactionPlanExecutorBase.ts  transactionPlanExecutorDecorators.ts  transactionPlanExecutorDefault.ts  transactionPlanner.ts  transactionPlannerBase.ts  transactionPlannerDefault.ts
clients/js/src/instructionPlansDraft/: computeBudgetHelpers.ts  index.ts  instructionPlan.ts  transactionHelpers.ts  transactionPlan.ts  transactionPlanExecutor.ts  transactionPlanExecutorBase.ts  transactionPlanExecutorDecorators.ts  transactionPlanExecutorDefault.ts  transactionPlanExecutorFactory.ts  transactionPlanExecutorFactoryDecorators.ts  transactionPlanResult.ts  transactionPlanner.ts  transactionPlannerBase.ts  transactionPlannerDecorators.ts  transactionPlannerDefault.ts  transactionPlannerFactory.ts  transactionPlannerFactoryDecorators.ts
clients/js/test/: _setup.ts  allocate.test.ts  close.test.ts  createMetadata.test.ts  downloadMetadata.test.ts  extend.test.ts  fetchIdl.test.ts  fetchMetadataContent.test.ts  increment.test.ts  initialize.test.ts  setAuthority.test.ts  setData.test.ts  setImmutable.test.ts  trim.test.ts  updateMetadata.test.ts  uploadMetadata.test.ts  upsertMetadata.test.ts  write.test.ts  writeMetadata.test.ts
clients/js/test/instructionPlans/: _instructionPlanHelpers.ts  _transactionPlanHelpers.ts  _transactionPlanResultHelpers.ts  transactionPlanner.test.ts
clients/js/test/instructionPlansDraft/: _instructionPlanHelpers.ts  _transactionPlanHelpers.ts  _transactionPlanResultHelpers.ts  transactionPlanExecutor.test.ts  transactionPlanner.test.ts
clients/js/test/loader-v3/: deploy.ts  initializeBuffer.ts  shared.ts  write.ts
clients/rust/: Cargo.toml  README.md
clients/rust/src/: lib.rs
clients/rust/src/hooked/: mod.rs  remainder_options.rs  zeroable_options.rs
clients/rust/tests/: create.rs
program/: Cargo.toml  README.md  idl.json  keypair.json
program/src/: assertions.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  state.rs
program/src/processor/: allocate.rs  close.rs  create.rs  extend.rs  initialize.rs  mod.rs  set_authority.rs  set_data.rs  set_immutable.rs  trim.rs  withdraw_excess_lamports.rs  write.rs
program/src/state/: buffer.rs  data.rs  header.rs  mod.rs
program/tests/: allocate.rs  close.rs  extend.rs  initialize.rs  set_authority.rs  set_data.rs  set_immutable.rs  trim.rs  write.rs
program/tests/setup/: allocate.rs  close.rs  extend.rs  initialize.rs  mod.rs  set_authority.rs  set_data.rs  set_immutable.rs  trim.rs  write.rs
scripts/: generate-clients.mjs  solana.dic  upgrade-template.mjs
scripts/js/: format.mjs  lint.mjs
scripts/program/: test.mjs
scripts/rust/: audit.mjs  fixtures.mjs  lint.mjs  test.mjs
