[package]
name = "spl-program-metadata"
version = "0.0.0"
edition = "2021"
readme = "./README.md"
license-file = "../LICENSE"
publish = false

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("solana"))']

[package.metadata.solana]
program-id = "ProgM6JCCvbYkfKqJYHePx4xxSUSqJp7rh8Lyv7nk7S"
program-dependencies = []
account-dependencies = []

[lib]
# TODO: split into program and interface crates
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = "0.8"
pinocchio-pubkey = "0.2"
pinocchio-system = "0.2"

[dev-dependencies]
mollusk-svm = "0.1"
solana-sdk = "2.2"

[features]
logging = []
test-sbf = []
