[package]
name = "spl-program-metadata"
version = "1.0.0"
edition = "2021"
readme = "./README.md"
license-file = "../LICENSE"
publish = false

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("solana"))']

[package.metadata.solana]
program-id = "ProgM6JCCvbYkfKqJYHePx4xxSUSqJp7rh8Lyv7nk7S"
program-dependencies = []
account-dependencies = []

[lib]
name = "spl_program_metadata"
# TODO: split into program and interface crates
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = "0.8"
pinocchio-pubkey = "0.2"
pinocchio-system = "0.2"
solana-security-txt = "1.1.1"

[dev-dependencies]
mollusk-svm = "0.12"
solana-account = "3.2"
solana-instruction = "3.4"
solana-program-error = "3.0.1"
solana-pubkey = "4.2.0"
solana-rent = "3.1"
solana-sdk-ids = "3.1.0"

[features]
logging = []
