[package]
name = "spl-program-metadata"
version = "1.0.1"
edition = "2021"
readme = "./README.md"
license-file = "../LICENSE"
publish = false

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("solana"))']

[package.metadata.solana]
program-id = "ProgM6JCCvbYkfKqJYHePx4xxSUSqJp7rh8Lyv7nk7S"
program-dependencies = []
account-dependencies = []

[lib]
name = "spl_program_metadata"
# TODO: split into program and interface crates
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = { version = "0.11.1", features = ["account-resize"] }
pinocchio-system = "0.6.1"
solana-program-log = { version = "1.0", default-features = false }
solana-security-txt = "1.1.3"

[dev-dependencies]
mollusk-svm = "0.13"
solana-account = "3.4"
solana-instruction = "3.2"
solana-logger = "3.0"
solana-program-error = "3.0"
solana-pubkey = "4.1"
solana-rent = "3.1"
solana-sdk-ids = "3.1"

[features]
logging = []
