[package]
name = "spl-program-metadata-client"
version = "0.0.0"
description = "A generated Rust library for the Program Metadata program"
repository = "https://github.com/solana-program/program-metadata"
edition = "2021"
readme = "README.md"
license-file = "../../LICENSE"

[features]
serde = ["dep:serde", "dep:serde_with"]
fetch = ["dep:solana-client", "dep:solana-sdk"]

[dependencies]
borsh = "^0.10"
num-derive = "^0.4"
num-traits = "^0.2"
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.0", optional = true }
solana-account = "~2.2"
solana-account-info = "~2.3"
solana-client = { version = "^2.3", optional = true }
solana-cpi = "~2.2"
solana-decode-error = "~2.3"
solana-instruction = "~2.3"
solana-program-error = "~2.2"
solana-pubkey = { version = "~2.4", features = ["curve25519", "borsh"] }
solana-sdk = { version = "^2.3", optional = true }
thiserror = "^1.0"
kaigan = { version = "^0.3", features = ["serde"] }
