[package]
name = "spl-program-metadata-client"
version = "0.0.0"
description = "A generated Rust library for the Program Metadata program"
repository = "https://github.com/solana-program/program-metadata"
edition = "2021"
readme = "README.md"
license-file = "../../LICENSE"

[features]
serde = ["dep:serde", "dep:serde_with"]
fetch = ["dep:solana-rpc-client", "dep:solana-sdk"]

[dependencies]
borsh = "^1.0"
num-derive = "^0.4"
num-traits = "^0.2"
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.0", optional = true }
solana-account = "~3.0"
solana-account-info = "~3.1"
solana-address = { version = "2.2", features = ["curve25519", "borsh"] }
solana-cpi = "~3.1"
solana-decode-error = "~2.3"
solana-instruction = "~3.2"
solana-program-error = "~3.0"
solana-rpc-client = { version = "^3.0", optional = true }
solana-sdk = { version = "^2.3", optional = true }
spl-collections = { version = "^0.1", features = ["borsh"] }
thiserror = "^1.0"
